# mce_script

./: INSTALL  Makefile  dne
defile-mas/: Makefile.am  bootstrap.sh  configure.ac  defile-mas.c
defile-mas/m4/: version.m4
idl_pro/: #auto_setup_squids.pro#  &  acq_15kHz_rectmode_1pix  acq_register  auto_iv_and_bias_tes.pro  auto_iv_and_squids.pro  auto_post_plot.pro  auto_reconfig  auto_setup_analysis_ramp_sa_fb.pro  auto_setup_analysis_ramp_sq1_fb.pro  auto_setup_command.pro  auto_setup_current_data.pro  auto_setup_filename.pro  auto_setup_frametest_plot.pro  auto_setup_iv_plot.pro  auto_setup_mask_dead.pro  auto_setup_mask_labels.pro  auto_setup_plot_servo.pro  auto_setup_ramp_sa_fb_plot.pro  auto_setup_ramp_sa_fb_plot_const_bias.pro  auto_setup_ramp_sq1_bias_plot.pro  auto_setup_ramp_sq1_fb_plot.pro  auto_setup_ramp_tes_bias_plot.pro  auto_setup_read_2d_ramp.pro  auto_setup_read_2d_ramp_s1.pro  auto_setup_read_2d_ramp_tes.pro  auto_setup_read_servo.pro  auto_setup_register.pro  auto_setup_sq1servo_plot.pro  auto_setup_sq1servo_safb_plot.pro  auto_setup_sq2servo_plot.pro  auto_setup_squids.new.pro  auto_setup_squids.old.pro  auto_setup_squids.pro  auto_setup_userword.pro  auto_squid2_Ic.pro  check_tes_res_sh  fb1const_sqrwave  frameacq_stamp  iv_anal_mce_ar1_bias.pro  (+31 more)
python/: clone_sequence.py  dead_smoothing.py  freeze_servo.py  interservo.py  iv_analysis.py  iv_tools.py  mce_auto_assist.py  mce_control.py  mce_data.py  mce_internal.py  mce_internal_ramp.py  mce_rawfile.py  mce_runfile.py  measure_quanta.py  mux_view.py  rect_check.py  rectangle.py  runfile2cfg.py  runfile_checks.py  servo.py  servo_freeze.py  servo_gains.py  special_ops.py  sq2_noise_test.py  sq2fb_table.py  test.py
script/: acq_register  acquire_dirfile  auto_acquire  auto_acquire_dirfile  auto_acquire_noseq  auto_acquire_seq  auto_bias_step  auto_configure  auto_iv  auto_iv_and_bias_tes_sh  auto_post_process  auto_ramp_tes_sh  auto_raw_acq  auto_reconfig  auto_setup  auto_setup_squids_sh  auto_stop  auto_warm  auto_zero_bias  bias_sqrwave  bias_step_acq  bias_tess  bias_tess_not0  cfg  check_zero  clear_fifo_mce_reply  dsp_library.bash  fast_15kHz_acq  fast_acq  frameacq_stamp  gain_mask_apply  gain_mask_create  gain_mask_extract  gain_off_list  heater_step_acq  hex  johnson_noise_acq  loopover_pixels_squidnoise  lowfreq_15kHz_trans  make_idl_templates  (+67 more)
template/: array.cfg  array_16tes.cfg  array_ABS.cfg  array_ADR.cfg  array_AF.cfg  array_AR1.cfg  array_AR2.cfg  array_AR3.cfg  array_MCE1.cfg  array_MCE2.cfg  array_list  auto_acq.py  bad_iv_template  bias_settings.cfg  bias_step.cfg  blank_mask.cfg  config_create.bash  config_header.bash  config_mce  config_mce_adc_offset  config_run.bash  experiment.cfg  experiment_ABS.cfg  experiment_ADR.cfg  experiment_AF.cfg  experiment_AR1.cfg  experiment_AR2.cfg  experiment_AR3.cfg  experiment_MCE1.cfg  experiment_MCE2.cfg  experiment_bicep2.cfg  experiment_bicep2_backup.cfg  experiment_keck.cfg  experiment_keck0.cfg  experiment_keck0_rowreg.cfg  experiment_keck0_rowrev.cfg  experiment_keck0b.cfg  experiment_spider.cfg  (+15 more)
utilities/defile-mas/: Makefile.am  bootstrap.sh  configure.ac  defile-mas.c
utilities/defile-mas/m4/: version.m4
(+313 files in other folders)
